--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-scroll-top": "^0.2.1",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
