Changed server and store names to be relevant.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "urban-dragon-server",
+    "name": "uurbandragonwear-server",
     "version": "1.0.0",
     "engines": {
         "node": "13.11.0",
