Added Progressive Web App Support, Updated manifest.json file for PWA support.

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,21 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Urban Dragon Wear",
+  "name": "Urban Dragon Wear Clothing Store",
   "icons": [
     {
-      "src": "storefavicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "udw-favicon.ico",
+      "sizes": "48x48",
       "type": "image/x-icon"
     },
     {
       "src": "dragonlogosmall.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "dragonlogosmall.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "250x250"
     }
   ],
   "start_url": ".",
