--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock*
 
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
+/client/yarn.lock*
